# rust-smt-ir

./: CONTRIBUTING.md  Cargo.toml  Config  README.md  module.mk
amzn-smt-eager-arithmetic/: Cargo.toml  README.md
amzn-smt-ir/: Cargo.toml
amzn-smt-ir/benches/: parsing.rs
amzn-smt-ir/src/: ackerman.rs  ackermann.rs  cnf.rs  eliminate.rs  fold.rs  lib.rs  logic.rs  script.rs  term.rs  types.rs  visit.rs
amzn-smt-ir/src/fold/: compose.rs  inter.rs  intra.rs
amzn-smt-ir/src/logic/: all.rs  cvc5_sets.rs
amzn-smt-ir/src/term/: convert.rs  quantifier.rs  sort_checking.rs
amzn-smt-ir/src/visit/: control_flow.rs
amzn-smt-ir/tests/: deep_nesting.rs  sets.rs
amzn-smt-prediction/: Cargo.toml  README.md
amzn-smt-prediction/Eager_Lazy/: README.md  benchmarks_idl.csv  benchmarks_lia.csv  idl_params.out  idl_results.csv  lia_params.out  lia_results.csv
amzn-smt-prediction/Eager_Lazy_SMT_Comp_2020/: README.md  idl_benchmarks.csv  lia_benchmarks.csv  test.csv
amzn-smt-prediction/SMT_Comp_2020/: README.md
amzn-smt-prediction/SMT_Comp_2020/experiments_2018-Kepler/: times_2018-Kepler_notimeout.csv  times_2018-Kepler_timeout.csv
amzn-smt-prediction/SMT_Comp_2020/experiments_CVC4_FMF/: faster_fmf.csv  slower_fmf.csv
amzn-smt-prediction/SMT_Comp_2020/experiments_QF_SLIA/: benchmarks_QF_SLIA_300-to-1200.csv  benchmarks_QF_SLIA_ALL.csv  lines_QF_SLIA_300-to-1200.csv  times_QF_SLIA_30-to-300.csv  times_QF_SLIA_300-to-1200.csv  times_QF_SLIA_ALL.csv
amzn-smt-prediction/SMT_Comp_2020/non-incremental/: README.md
amzn-smt-prediction/Zelkova/: clean_zelkova_results.py
amzn-smt-prediction/Zelkova/experiments_cvc4_fmf/: benchmarks_cvc4_zelkova.csv
amzn-smt-prediction/Zelkova/experiments_z3_transpiler/: transpiled_faster_zelkova.csv
amzn-smt-prediction/models/: README.md
amzn-smt-prediction/models/Eager_vs_Lazy/: best_solver_idl.csv  features_lia.csv  pearson_r3.ipynb  test.csv  times_sat_lia.csv  train.csv  train3.ipynb  validation.csv
amzn-smt-prediction/models/Eager_vs_Lazy/CreateXgboostReport/: xgboost_report.html  xgboost_report.ipynb
amzn-smt-prediction/models/Eager_vs_Lazy_Expanded/: best_cvc4.csv  best_none.csv  best_sat.csv  best_z3.csv  test.csv  train.csv  train3.1.ipynb  validation.csv
amzn-smt-prediction/models/Eager_vs_Lazy_Expanded/CreateXgboostReport/: xgboost_report.html  xgboost_report.ipynb
amzn-smt-prediction/models/Eager_vs_Lazy_Expanded/CreateXgboostReport/xgboost-reports/: FeatureImportance.json  LabelsDistribution.json  LossData.json
amzn-smt-prediction/models/QF_SLIA_FMF_Faster/: on_features_fmf_faster.csv  on_features_fmf_slower.csv  pearson_r2.ipynb  test.csv  train.csv  train2.ipynb  validation.csv
amzn-smt-prediction/models/QF_SLIA_FMF_Faster/CreateXgboostReport/: xgboost_report.html  xgboost_report.ipynb
amzn-smt-prediction/models/QF_SLIA_Runtime/: pearson_r1.ipynb  test.csv  times_QF_SLIA_ALL.csv  train.csv  train1.ipynb  validation.csv
amzn-smt-prediction/models/QF_SLIA_Runtime/CreateXgboostReport/: xgboost_report.html  xgboost_report.ipynb
amzn-smt-prediction/output/Eager_Lazy/Full_QF_IDL/: idl_fastest_solver.csv  idl_features.csv
amzn-smt-prediction/output/Eager_Lazy/Original/: best_solver_lia.csv  features_idl.csv
amzn-smt-prediction/output/SMT_Comp/2018-Kepler/: off_features_2018-Kepler_notimeout.csv  off_features_2018-Kepler_timeout.csv
amzn-smt-prediction/output/SMT_Comp/CVC4_FMF/: off_features_fmf_slower.csv
amzn-smt-prediction/output/SMT_Comp/QF_SLIA/: all_features_QF_SLIA.csv  on_features_QF_SLIA_ALL.csv
amzn-smt-prediction/output/Zelkova/: off_features_z3_zelkova.csv
amzn-smt-prediction/scripts/: README.md  clean_eager_lazy_data.py  clean_smt_comp_results.py  find_faster.py  find_faster_fmf.sh  generate_predictions.py  get_solver_output.py  get_solver_output_fmf.sh  get_solver_output_fmf_faster.sh  get_solver_output_fmf_slower.sh  get_solver_output_no_fmf.sh  get_word_count_features.py  get_word_counts.py  modernize_benchmarks.py  requirements.txt  run_eager_v_lazy.py
amzn-smt-prediction/scripts/examples/: 284.smt2  lia_config.ini  sample_config.ini  slia_config_fmf.ini  slia_config_no_fmf.ini
amzn-smt-prediction/src/: main.rs
amzn-smt-string-transformer/: Cargo.toml  README.md  pairwise_diff_count.sh  parallel_test_transform_list.sh
amzn-smt-string-transformer/src/: callgraph.rs  forest.rs  lib.rs  reconstruct_tools.rs  string_fcts.rs  string_mappings.rs  subformula_parser.rs  transpiler.rs  transpiler_visitors.rs
amzn-smt-string-transformer/test_data/: example1.smtlib  example10.smtlib  example1_transformed.smtlib  example2_transformed.smtlib  example3_transformed.smtlib  example4.smtlib  example4_transformed.smtlib  example5_transformed.smtlib  example6.smtlib  example7.smtlib  example8_transformed.smtlib  example_transformed.smtlib  small2_transformed.smtlib
aws-smt-ir/: Cargo.toml  README.md
aws-smt-ir-derive/: Cargo.toml  README.md
aws-smt-ir-derive/src/: lib.rs
aws-smt-ir/benches/: parsing.rs
aws-smt-ir/src/: ackermann.rs  cnf.rs  eliminate.rs  fold.rs  lib.rs  logic.rs  model.rs  script.rs  smt2parser.rs  term.rs  types.rs  visit.rs
aws-smt-ir/src/fold/: intra.rs
aws-smt-ir/src/logic/: arith.rs  arrays.rs  bitvecs.rs  strings.rs
aws-smt-ir/src/smt2parser/: concrete.rs  lexer.rs  parser.rs  renaming.rs  rewriter.rs  visitors.rs
aws-smt-ir/src/term/: args.rs  convert.rs  fmt.rs  operation.rs  sort_checking.rs  substitute.rs  uf.rs
aws-smt-ir/tests/: as_const.rs  deep_nesting.rs  derives.rs  sets.rs
aws-smt-ir/tests/examples/: test-coercion1.smt2  test-coercion2.smt2  test-coercion3.smt2  test-coercion4.smt2
cargo-project/amzn-smt-eager-arithmetic/: Cargo.toml
cargo-project/amzn-smt-eager-arithmetic/benches/: presburger_encoding.rs
cargo-project/amzn-smt-eager-arithmetic/src/: encoding.rs  main.rs
cargo-project/amzn-smt-eager-arithmetic/tests/: end_to_end.rs
cargo-project/amzn-smt-ir-derive/: Cargo.toml
cargo-project/amzn-smt-string-fct-updater/: .gitignore  Cargo.toml  README.md
cargo-project/amzn-smt-string-fct-updater/src/: e1.smtlib  e1_upt.smtlib
(+290 files in other folders)
