[package]
name = "amzn-smt-ir"
version = "0.2.0"
authors = ["Max Heller <maxhelle@amazon.com>"]
edition = "2018"

# Setting publish to false prevents the accidental publishing
# of your code to (the public) crates.io, as described here:
#
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish--field-optional
#
# Those who knowingly wish to publish their code will have to
# manually remove this line and have it reviewed by your team,
# AppSec, InfoSec, the Open Source group, or other parties.
publish = false

[dependencies]
amzn-smt-ir-derive = { path = "../amzn-smt-ir-derive", version = "0.1" }
either = "1.6"
internment = { version = "0.6", features = ["arc"] }
itertools = "0.10"
num-traits = "0.2"
once_cell = "1.8"
smallvec = { version = "1.6", features = ["union"] }
smt2parser = "0.6.1"
stacker = "0.1"
thiserror = "1.0"
varisat = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.3"
paste = "1.0"
static_assertions = "1.1"
varisat = "0.2"
z3-sys = "0.7"

[[bench]]
name = "parsing"
harness = false