[package]
name = "amzn-smt-prediction"
version = "0.1.0"
authors = ["Mike Giancola <mike.j.giancola@gmail.com>"]
edition = "2018"

# Setting publish to false prevents the accidental publishing
# of your code to (the public) crates.io, as described here:
#
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish--field-optional
#
# Those who knowingly wish to publish their code will have to
# manually remove this line and have it reviewed by your team,
# AppSec, InfoSec, the Open Source group, or other parties.
publish = false

[dependencies]
# Example third-party import
# serde = "^1.0"
amzn-smt-ir = { path = "../amzn-smt-ir", version = "0.1" }
smt2parser = "0.6"

# See more Cargo.toml keys and their definitions: https://doc.rust-lang.org/cargo/reference/manifest.html
