[package]
name = "amzn-smt-string-transformer"
version = "0.1.0"
edition = "2018"
authors = ["Byron Cook <byron@amazon.com>", "Ellen Arteca <ellen.arteca@gmail.com>"]

# Setting publish to false prevents the accidental publishing
# of your code to (the public) crates.io, as described here:
#
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish--field-optional
#
# Those who knowingly wish to publish their code will have to
# manually remove this line and have it reviewed by your team,
# AppSec, InfoSec, the Open Source group, or other parties.
publish = false

[dependencies]
amzn-smt-ir = { path = "../amzn-smt-ir", version = "0.1" }
chrono = "0.4"
smt2parser = "0.6.1"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"

# debugging
env_logger = "0.8.2"
tracing-subscriber = { version = "0.2.16", features = ["fmt"] }

# See more Cargo.toml keys and their definitions: https://doc.rust-lang.org/cargo/reference/manifest.html
