[package]
name = "aws-smt-ir-derive"
version = "0.1.0"
description = "Intermediate representation for SMT problems"
repository = "https://github.com/awslabs/rust-smt-ir"
authors = ["Max Heller",
	"Mike Whalen <mww@amazon.com>",
	"Bruno Dutertre <dutebrun@amazon.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["smt", "smt-lib", "solver"]
categories = ["science"]
edition = "2018"

publish = true

[lib]
proc-macro = true

[dependencies]
synstructure = "0.13"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
