[package]
name = "aws-smt-ir"
version = "0.3.0"
description = "Intermediate representation for SMT problems"
repository = "https://github.com/awslabs/rust-smt-ir"
authors = ["Max Heller",
	"Mike Whalen <mww@amazon.com>",
	"Bruno Dutertre <dutebrun@amazon.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["smt", "smt-lib", "solver"]
categories = ["science"]
edition = "2018"

publish = true

[dependencies]
aws-smt-ir-derive = "0.1"
either = "1.6"
internment = { version = "0.7.0", features = ["intern"] }
itertools = "0.11"
num-traits = "0.2"
once_cell = "1.8"
smallvec = { version = "1.6", features = ["union"] }
stacker = "0.1"
thiserror = "1.0"
varisat = { version = "0.2", optional = true }
# dependencies for smt2parser
num = { version = "0.4", features = ["serde"] }
pomelo = "0.1.5"
fst = "0.4.5"
serde = { version = "1.0.125", features = ["derive"] }
permutation_iterator = "0.1.2"
strum = { version = "0.25", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
paste = "1.0"
static_assertions = "1.1"
varisat = "0.2"

[[bench]]
name = "parsing"
harness = false