[package]
name = "amzn-smt-ir-derive"
version = "0.1.0"
authors = ["Max Heller <maxhelle@amazon.com>"]
edition = "2018"

# Setting publish to false prevents the accidental publishing
# of your code to (the public) crates.io, as described here:
#
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish--field-optional
#
# Those who knowingly wish to publish their code will have to
# manually remove this line and have it reviewed by your team,
# AppSec, InfoSec, the Open Source group, or other parties.
publish = false

[lib]
proc-macro = true

[dependencies]
synstructure = "0.12"
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-crate = "1.0"
syn = { version = "1.0", features = ["full", "fold"] }
