[package]
name = "amzn-smt-string-fct-updater"
version = "0.1.0"
edition = "2018"
authors = ["Ellen Arteca <ellen.arteca@gmail.com>", "Bruno Dutertre <dutebrun@amazon.com>"]

# Setting publish to false prevents the accidental publishing
# of your code to (the public) crates.io, as described here:
#
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish--field-optional
#
# Those who knowingly wish to publish their code will have to
# manually remove this line and have it reviewed by your team,
# AppSec, InfoSec, the Open Source group, or other parties.
publish = false

[dependencies]
amzn-smt-ir = { path = "../amzn-smt-ir", version = "0.1" }
smt2parser = "0.6"

